<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="170dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/my_app_logo"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="text"
        android:hint="@string/SI01"
        android:background="@drawable/custom_edittext"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_below="@+id/login_email"
        android:hint="@string/SI02"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/SI03"
        android:textSize="16sp"
        android:backgroundTint="@color/medium_blue"
        android:layout_below="@id/login_password"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/login_forgot_password"
        android:text="@string/SI04"
        android:textColor="@color/medium_blue"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_forgot_password">
        <TextView
            android:text="@string/SI05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/login_sign_account"
            android:text="@string/SI05_1"
            android:textColor="@color/medium_blue"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>