<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SignUpActivity">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="170dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/my_app_logo"/>

    <EditText
        android:id="@+id/signup_username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/SU_01"
        android:background="@drawable/custom_edittext"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/signup_password"
        android:layout_below="@+id/signup_username"
        android:hint="@string/SU_02"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/signup_confirm_password"
        android:layout_below="@+id/signup_password"
        android:hint="@string/SU_03"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/signup_email"
        android:layout_below="@+id/signup_confirm_password"
        android:hint="@string/SU_04"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"/>

    <Button
        android:id="@+id/btn_signup"
        android:text="@string/SU_05"
        android:textSize="16sp"
        android:backgroundTint="@color/medium_blue"
        android:layout_below="@id/signup_email"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signup">
        <TextView
            android:text="@string/SU_06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/signup_login_account"
            android:text="@string/SU_06_1"
            android:textColor="@color/medium_blue"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>