<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">
        <ImageView
            android:layout_width="160dp"
            android:layout_height="170dp"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/my_app_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:text="@string/F01"/>

        <EditText
            android:id="@+id/forget_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/F02"
            android:padding="12dp"
            android:background="@drawable/rounded_border"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/forget_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_border"
            android:layout_below="@+id/forget_email"
            android:visibility="invisible"
            android:hint="@string/F02_1"/>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_below="@id/forget_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <TextView
                android:text="@string/F03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

            <Button
                android:id="@+id/btn_send"
                android:text="@string/F04"
                android:layout_width="85dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/medium_blue"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/F05"
            android:textSize="16sp"
            android:layout_below="@id/linear_layout"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            android:backgroundTint="@color/medium_blue"
            android:visibility="invisible"/>
    </RelativeLayout>

</RelativeLayout>