<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ResetPassword">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="170dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/my_app_logo"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/R01"/>

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <EditText
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:padding="12dp"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="20dp"
        android:hint="@string/R02"/>

    <EditText
        android:id="@+id/reset_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_password"
        android:background="@drawable/custom_edittext"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:hint="@string/R02"/>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/medium_blue"
        android:layout_below="@id/reset_confirm_password"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/R03"
        android:textSize="16sp"/>
</RelativeLayout>