<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/arrow"
            android:rotation="180"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"/>
        
        <EditText
            android:id="@+id/searchKeyWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/S01"
            android:textSize="16sp"
            android:background="@drawable/circle_border"
            android:padding="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <ImageView
            android:id="@+id/imageViewSearch"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/search_black" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/rounded_border"
        android:layout_marginTop="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S02"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/clearAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S03"
            android:textColor="@color/medium_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/recent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSearchUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>